# yanzhi

./: .gitignore  benchmark.py  bootstrap_check.py  debug_tokenizer.py  overview.md  profile_performance.py  project-plan.md  pyproject.toml  repl.py  run-tests.bat  test_advanced_cache.py  test_all_tokenizers.py  test_cache_simple.py  test_cached_fixed.py  test_dynamic_partitions.py  test_dynamic_simple.py  test_lru_cache.py  test_memory_monitoring.py  test_optimized_cache.py  test_optimized_tokenizer.py  test_performance_big.py  test_production_cache.py  test_thread_safety.py  test_vm_performance.py  test_vm_simple.py
.github/workflows/: ci.yml
.workbuddy/memory/: 2026-06-09.md
docs/: quickstart.md
examples/: advanced.yan  algorithms.yan  bubblesort.yan  demo.yan  fibonacci.yan  fizzbuzz.yan  hanoi.yan  math_tools.yan  pipeline_demo.yan  primes.yan  quicksort.yan  turing.yan  webserver.yan  yan_law.yan
playground/: server.py
playground/static/: index.html  script.js  style.css
src/yanzhi/: __init__.py  __main__.py  cli.py  errors.py  pkg_manager.py
src/yanzhi/compiler/: ast.py  cache_predictor.py  cache_predictor_enhanced.py  codegen.py  errors.py  expander.py  indent_processor.py  init_structs.py  lexer.py  online_learning_optimized.py  optimize.py  parser.py  pre_tokenizer.py  pre_tokenizer_cached.py  pre_tokenizer_cached_fixed.py  pre_tokenizer_optimized.py  py_to_yan.py  trie.py  typecheck.py
src/yanzhi/data/: __init__.py  surnames.py
src/yanzhi/lsp/: __init__.py  server.py
src/yanzhi/runtime/: builtin.py  bytecode.py  bytecode_compiler.py  compiler_bc.py  enhanced_runtime.py  evaluator.py  macro_env.py  module_loader.py  performance.py  repl.py  vm.py  (+2 more)
tests/: conftest.py  debug_demo.py  debug_factorial.py  debug_lex.py  demo.py  run_demo.py  test_homoiconicity.py  test_repl.yan
tests/archive/: debug_minimal.py  run_demo_final.py  test_factorial.py  test_factorial.yan  test_factorial2.py
tests/unit/: __init__.py
(+36 files in other folders)
